# aoc2024

./: .gitignore  Cargo.toml
aoc/: Cargo.toml
aoc-macros/: Cargo.toml
aoc-macros/src/: lib.rs
aoc/src/: astar.rs  lib.rs  map.rs  types.rs
day01/src/: main.rs
day02/src/: main.rs
day03/: Cargo.toml
day03/src/: main.rs
day04/: Cargo.toml
day04/src/: main.rs
day05/src/: main.rs
day06/src/: main.rs
day07/src/: main.rs
day08/: Cargo.toml
day08/src/: main.rs
day09/src/: main.rs
day1/: Cargo.toml
day1/src/: main.rs
day10/: Cargo.toml
day10/src/: main.rs
day11/: Cargo.toml
day11/src/: main.rs
day12/: Cargo.toml
day12/src/: main.rs
day13/: Cargo.toml
day13/src/: main.rs
day14/: Cargo.toml
day14/src/: main.rs
day15/: Cargo.toml
day15/src/: main.rs  part1.rs  part2.rs
day16/: Cargo.toml
day16/src/: main.rs
day17/: Cargo.toml
day17/src/: main.rs
day18/: Cargo.toml
day18/src/: main.rs
day19/: Cargo.toml
day19/src/: main.rs
day2/: Cargo.toml
day2/src/: main.rs
day20/: Cargo.toml
day20/src/: main.rs
day21/: Cargo.toml
day21/src/: main.rs
day22/: Cargo.toml
day22/src/: main.rs
day24/: Cargo.toml
day24/src/: main.rs
day3/src/: main.rs
day4/src/: main.rs
day5/: Cargo.toml
day6/: Cargo.toml
day6/src/: main.rs
day7/: Cargo.toml
day8/src/: main.rs
day9/: Cargo.toml
