[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["derive"]
derive = ["dep:aoc-macros"]

[dependencies]
anyhow = { version = "1.0.93", features = ["backtrace"] }
aoc-macros = { version = "0.1.0", path = "../aoc-macros", optional = true }
nom = "7.1.3"
smallvec = "1.11.2"
thiserror = "1.0.50"
